--- a/cv.tex
+++ b/cv.tex
@@ -147,9 +147,9 @@ Washington, DC: U.S. Patent and Trademark Office.
 
 \textbf{Turner MA}, Bernacchi L, Maglio PP, Matlock T, (2018, December) How regulations strangle business: Lessons for science communication based on violence metaphors in the 2016 presidential election. eLightning talk at the American Geophysical Union meeting in Washington, D.C. \url{https://agu.confex.com/agu/fm18/meetingapp.cgi/Paper/451955}
 
-Turner MA \& Smaldino PE, (2018, October) Cultural polarization depends on whom we learn from and how well we communicate. Lightning talk during plenary session presented at the Cultural Evolution Society meeting in Tempe, Arizona.
+\textbf{Turner MA} \& Smaldino PE, (2018, October) Cultural polarization depends on whom we learn from and how well we communicate. Lightning talk during plenary session presented at the Cultural Evolution Society meeting in Tempe, Arizona.
 
-Turner MA, Maglio PP, Matlock, T, (2017, July) A corpus analysis of the dynamics of violence metaphors in cable news programming on US politics. Talk presented at the 14th International Cognitive Linguistics Conference in Tartu, Estonia.
+\textbf{Turner MA}, Maglio PP, Matlock, T, (2017, July) A corpus analysis of the dynamics of violence metaphors in cable news programming on US politics. Talk presented at the 14th International Cognitive Linguistics Conference in Tartu, Estonia.
 
 \textbf{Turner MA}, Bernacchi, L, Maglio, PP, Matlock, T, (2017, June) Breaking news: the EPA is strangling the economy! An analysis of metaphorical violence and US environmental regulators. Talk presented at the 2017 Conference on Communication and the Environment.
 
@@ -169,8 +169,29 @@ Turner MA, Maglio PP, Matlock, T, (2017, July) A corpus analysis of the dynamics
 \section*{\textcolor{gunmetal}{Reviewer}}
 
   \begin{hangparas}{0.25in}{1}
-    For \emph{Cognitive Systems Research} $\cdot$ \emph{Psychological Review} 
+    \emph{Cognitive Systems Research} $\cdot$ \emph{Psychological Review} 
   \end{hangparas}
+
+\noindent
+\section*{\textcolor{gunmetal}{Awards}}
+\begin{itemize}
+  \item Research Data Alliance Young Researcher Fellow, May 2015
+  \item NSF-IGERT Fellow, August 2010 - May 2012
+\end{itemize}
+
+\section*{\textcolor{gunmetal}{Skills}}
+
+\begin{hangparas}{0.25in}{1}
+  \textbf{Programming languages}: Python; R; NetLogo; bash/shell scripting; 
+  HTML/CSS/JavaScript; Java; D; MATLAB; Mathematica; Clojure.
+
+  \textbf{Technical proficiencies}: Agent-based modeling, and computational 
+  modeling generally; Unit testing; IPython and R notebooks; Cluster computing;
+  Git/GitHub; Web servers; \LaTeX; MongoDB and SQL; REST APIs.
+
+  \textbf{Languages:} English; some experience with Portuguese, French,
+  and Spanish. 
+\end{hangparas}
 
 
 % \end{adjustwidth}
