added preprints and rearranged some things

--- a/cv.tex
+++ b/cv.tex
@@ -138,7 +138,18 @@ Washington, DC: U.S. Patent and Trademark Office.
 % \end{minipage} \\[.25in]
 
 \noindent
+\section*{\textcolor{gunmetal}{Preprints}}
+\begin{hangparas}{0.25in}{1}
+
+  Turner, M. A., Maglio, P. P., \& Matlock, T. (2018) Metaphorical Violence in Political Discourse. \url{https://doi.org/10.31235/osf.io/t8yg9}
+
+  Turner, M. A. (2018) A neural network to classify metaphorical violence on cable news. \url{https://arxiv.org/abs/1810.08677}
+
+\end{hangparas}
+
+\noindent
 % {\Large Presentations} \\
+
 \section*{\textcolor{gunmetal}{Presentations}}
 
 % \begin{minipage}{0.9\textwidth}
@@ -169,7 +180,7 @@ Washington, DC: U.S. Patent and Trademark Office.
 \section*{\textcolor{gunmetal}{Reviewer}}
 
   \begin{hangparas}{0.25in}{1}
-    \emph{Cognitive Systems Research} $\cdot$ \emph{Psychological Review} 
+    \emph{Psychological Review} $\cdot$ \emph{Cognitive Systems Research}
   \end{hangparas}
 
 \noindent
