updated with IRES and link to RDA fellows

--- a/turner_cv.tex
+++ b/turner_cv.tex
@@ -65,8 +65,8 @@
 % \begin{minipage}{0.9\textwidth}
   \begin{hangparas}{0.25in}{1}
 
-    \textbf{Ph.D. Candidate}, Cognitive and Information 
-      Sciences, \emph{University of California, Merced}. Expected Spring 2020. Adviser: Paul E. Smaldino; Committee:
+    \textbf{Ph.D. candidate}, Cognitive and Information 
+      Sciences, \emph{University of California, Merced}. Expected Spring 2021. Adviser: Paul E. Smaldino; Committee:
     Chris Kello, Teenie Matlock, and Jeffrey Yoshimi.
 
     \textbf{M.S. with thesis}, Applied Physics, \emph{Rice University}, 2012. Adviser: 
@@ -104,7 +104,10 @@
 
 % \begin{minipage}{0.9\textwidth}
 \begin{hangparas}{0.25in}{1}
-    Gregory A, \ldots, \textbf{Turner MA}, Efficient Model-data Integration for Flexible Modeling, Parameter Analysis \& Visualization, and Data Management. \emph{Frontiers in Water}. (Forthcoming).
+  \textbf{Turner MA} \& Smaldino PE (Accepted). Stubborn Extremism as a Potential Pathway to Group Polarization. \emph{Proceedings of the 42$^{\,nd}$ Annual Conference of the Cognitive Science Society}.
+
+    Gregory A, \ldots, \textbf{Turner MA} (2020). Efficient Model-data Integration for Flexible Modeling, Parameter Analysis \& Visualization, and Data Management. \emph{Frontiers in Water}. 
+    \url{https://doi.org/10.3389/frwa.2020.00002}
 
     Smaldino PE, \textbf{Turner MA}, Contreras Kallens PA (2019). Open Science and Modified Funding Lotteries Can Impede the Natural Selection of Bad Science. \emph{Royal Society Open Science}, 6(8), 191249. \url{https://doi.org/10.1098/rsos.191249}
 
@@ -112,9 +115,8 @@
 
     \textbf{Turner MA} \& Smaldino PE (2018). Paths to Polarization: How Extreme Views,
     Miscommunication, and Random Chance Drive Opinion Dynamics. \emph{Complexity}. \url{https://doi.org/10.1155/2018/2740959}
-
     
-  \textbf{Turner MA} (2012) \emph{Experimental and Numerical Investigations of Novel Architectures Applied to Compressive Imaging Systems}. Master's thesis. Rice University. Houston, Texas. Available at: \url{https://www.researchgate.net/publication/274720620_Experimental_and_Numerical_In vestigations_of_Novel_Architectures_Applied_to_Compressive_Imaging_Systems}
+  \textbf{Turner MA} (2012) \emph{Experimental and Numerical Investigations of Novel Architectures Applied to Compressive Imaging Systems}. Master's thesis. Rice University. Houston, Texas. (\href{https://www.researchgate.net/publication/274720620_Experimental_and_Numerical_In vestigations_of_Novel_Architectures_Applied_to_Compressive_Imaging_Systems}{link})
 
     Xu L, Davenport MA, \textbf{Turner MA}, Sun T, Kelly K (2011) Compressive Echelle Spectroscopy. \emph{Proceedings of the SPIE – The International Society for Optical Engineering.}
 
@@ -131,19 +133,33 @@
 
 % \begin{minipage}{0.9\textwidth}
   \begin{hangparas}{0.25in}{1}
-  Kelly KF, Baraniuk RG, Woods G, Sun T, \textbf{Turner M}. U.S. Patent No. 9,124,755. (2015).
-Washington, DC: U.S. Patent and Trademark Office.    
+  Kelly KF, Baraniuk RG, Woods G, Sun T, \textbf{Turner MA}. U.S. Patent No. 9,124,755. 
+  ``Apparatus and method for compressive imaging and sensing through multiplexed modulation''.
+  September 1, 2015.
+
     
   \end{hangparas}
-% \end{minipage} \\[.25in]
+
+
+\noindent
+\section*{\textcolor{gunmetal}{Awards}}
+\begin{itemize}
+  \item NSF Research Training (NRT) Program in Intelligent Adaptive Systems, September 2020 - August 2021.
+  \item Research Data Alliance Early Career Fellow, May 2015
+    (\href{https://rd-alliance.org/rda_us data share program}{info}).
+  \item NSF Integrative Graduate Education and Research Traineeship (IGERT) Fellow, August 2010 - May 2012.
+  \item NSF International Research Experience for Students (IRES) at UFSC,
+    Santa Catarina, Brazil, Summer 2008;
+    astrophysical research and autonomous telescope network development.
+\end{itemize}
 
 \noindent
 \section*{\textcolor{gunmetal}{Preprints}}
 \begin{hangparas}{0.25in}{1}
 
-  Turner, M. A., Maglio, P. P., \& Matlock, T. (2018) Metaphorical Violence in Political Discourse. \url{https://doi.org/10.31235/osf.io/t8yg9}
+  \textbf{Turner MA}, Maglio PP, Matlock T (2018) Metaphorical Violence in Political Discourse. \url{https://doi.org/10.31235/osf.io/t8yg9}
 
-  Turner, M. A. (2018) A neural network to classify metaphorical violence on cable news. \url{https://arxiv.org/abs/1810.08677}
+  \textbf{Turner MA} (2018) A neural network to classify metaphorical violence on cable news. \url{https://arxiv.org/abs/1810.08677}
 
 \end{hangparas}
 
@@ -183,138 +199,23 @@ Washington, DC: U.S. Patent and Trademark Office.
     \emph{Psychological Review} $\cdot$ \emph{Cognitive Systems Research}
   \end{hangparas}
 
-\noindent
-\section*{\textcolor{gunmetal}{Awards}}
-\begin{itemize}
-  \item Research Data Alliance Young Researcher Fellow, May 2015
-  \item NSF-IGERT Fellow, August 2010 - May 2012
-\end{itemize}
 
+\noindent
 \section*{\textcolor{gunmetal}{Skills}}
 
 \begin{hangparas}{0.25in}{1}
   \textbf{Programming languages}: Python; R; NetLogo; bash/shell scripting; 
   HTML/CSS/JavaScript; Java; D; MATLAB; Mathematica; Clojure.
 
-  \textbf{Technical proficiencies}: Agent-based modeling, and computational 
-  modeling generally; Unit testing; IPython and R notebooks; Cluster computing;
-  Git/GitHub; Web servers; \LaTeX; MongoDB and SQL; REST APIs.
+  \textbf{Technical proficiencies}: Agent-based modeling, computational 
+  modeling; IPython and R notebooks; Cluster computing;
+  Git/GitHub; Web servers; \LaTeX; MongoDB and SQL; REST APIs and API
+  development.
 
   \textbf{Languages:} English; some experience with Portuguese, French,
-  and Spanish. 
+  and Spanish.
 \end{hangparas}
 
-
-% \end{adjustwidth}
-
-% \noindent \begin{tabular}{@{} l l}
-%  \Large{Education}    & \textbf{Most Recent University} \\
-%      & Ph.D., Economics, 2015. \\
-%      & Fields: International Trade, Monetary Economics, Development \\
-%      & M.A., Political Science, 2013. \\
-%      & \\
-%      & \textbf{University of Illinois Champaign-Urbana} \\
-%      & B.A., Economics, 2005. \\
-%      & \\
-%  \Large{Dissertation}    & ``Title of Dissertation" \\
-%     & \parbox{5.0in}{Short description/summary of research and estimation techniques. This can be several lines long because of the paragraph box.}\\
-%     & \\
-%  \Large{Research}    & \textbf{Department, University} \\
-%      & Postdoctoral Research Associate \\
-%      & Project: Title of Research \\
-%      & \\
-%   \Large{Teaching}   & \textbf{Department, University} \\
-%      & Instructor, Fundamentals of the Global Economy, 2016 \\
-%      & \\
-%      &\textbf{Department, University} \\
-%      & Job Title, Course Name, 2014-2015 \\
-%      & Job Title, Course Name, 2012-2014 \\
-%      & \\
-%      & \textbf{Department, University} \\
-%      & Job Title, Course Name, 2013 \\
-%      & Job Title, Course Name, 2013 \\
-%      & \\
-%  \Large{Awards and }    & \textbf{Graduate Student Teacher of the Year, Department} \\
-%   \Large{Fellowships}   & Course Name, 2014-2015 \\
-%      & \\
-%      & \textbf{Fulbright Scholarship} \\
-%      & City, Country, 2006-2009 \\
-%      & \\
-%   \Large{Languages}   & English (native), German (advanced) \\
-% \Large{and Skills}    & Stata, \LaTeX, Eviews, Mathematica  \\
-% \end{tabular}
-
-% \newpage
-
-% %%%%%%%%%%%%%%%%% REFERENCES %%%%%%%%%%%%%%%%%%%%%%%%%%
-% % The reference section has links to your references' websites and email addresses.
-
-% \noindent \begin{tabular}{@{} l l l}
-%  \Large{References} & \href{http://www.professorone.com}{Professor One} & \href{http://www.professortwo.com}{Professor Two} \\
-%  & Department Name &  Department Name  \\
-%  & University Name &  University Name \\
-%  & \small{\href{mailto:prof1@email.com}{prof1@email.com},+1\,(123)\,456-7899} & \small{\href{mailto:prof2@email.com}{prof2@email.com},+1\,(987)\,654-3210} \\
-% && \\
-%  & \href{http://www.professorthree.com}{Professor Three} & \href{http://www.professorfour.com}{Professor Four}  \\
-%  & Department Name &  Department Name \\
-%  & University Name &  University Name \\
-%  & \small{\href{mailto:prof3@email.com}{prof3@email.com},+1\,(123)\,789-1011} & \small{\href{mailto:prof4@email.com}{prof4@email.com},+1\,(789)\,456-9879} \\
-% \end{tabular}
-
-
-
-% \clearpage
-% \setlength\parindent{0cm}
-% \pagenumbering{gobble} %cover letter should be one page, {gobble}=no page number
-
-
-
-% \begin{flushright}
-%  \today                           \\
-%  \vspace{1em}                              
-%  Home University            \\
-%  Home Department                  \\
-%  Street Address                       \\
-%  City, State. 12345-67899   \\
-%  Phone: +1 (123) 456-7899         \\
-% \href{mailto:john.smith@email.com}{john.smith@email.com}  \\ %insert your email address here for a clickable link
-% \end{flushright}
-
-
-% \begin{flushleft}
-%  \textbf{Faculty Search Committee}         \\
-%  Name of University \\
-% Name of Department                  \\
-% Address of Department \\
-% City, State. Zip Code
-% \end{flushleft}
-
-% \vspace{2em}
-
-% Dear Sir or Madam, \\
-
-% \vspace{1em}
-% \onehalfspacing
-
-% My name is John Smith and I'm applying to the academic position in this subject at the Name of University. I have experience teaching something and something else and my research focuses on this and that. I completed my Ph.D. in this subject in September 2015 at my alma mater.
-
-% \vspace{1em}
-
-% My educational background is in this and that at the former university along with an earned Master's and Ph.D. degree in this recent subject at this alma mater. I have taught this, that, and everything else. My research is in this area, that area, and another area still.
-
-% \vspace{1em}
-
-% My dissertation advisor, Professor Head Adviser, and committee members Professor Two and Professor Three have been instrumental throughout my time at Home University. Please feel free to contact me with any questions.
-
-% \vspace{1em}
-
-% \begin{flushright}
-% Sincerely, \\
-% \vspace{1em} 
-% \includegraphics[scale=0.4]{Phillips} \\ %insert your own signature here
-% \vspace{1em} 
-% John Smith \\
-% \end{flushright}
 
 \end{document}
 
