--- a/turner_cv.tex
+++ b/turner_cv.tex
@@ -82,7 +82,7 @@
 
 % \begin{minipage}{0.9\textwidth}
   \begin{hangparas}{0.25in}{1}
-      2014 - 2016 \quad\textbf{Research Software Developer}, 
+    2014 - 2016 \hspace{-0.555em} \quad\textbf{Research Software Developer}, 
         \emph{Northwest Knowledge Network, University of Idaho}, Moscow, ID, USA 
 
       2012 - 2014 \quad \textbf{Data Engineer}, 
@@ -104,7 +104,9 @@
 
 % \begin{minipage}{0.9\textwidth}
 \begin{hangparas}{0.25in}{1}
-  \textbf{Turner MA} \& Smaldino PE (Accepted). Stubborn Extremism as a Potential Pathway to Group Polarization. \emph{Proceedings of the 42$^{\,nd}$ Annual Conference of the Cognitive Science Society}.
+Smaldino PE \& \textbf{Turner MA}. Covert Signaling is an Adaptive Communication Strategy in Diverse Populations. \emph{Under review}.
+
+  \textbf{Turner MA} \& Smaldino PE (2020). Stubborn Extremism as a Potential Pathway to Group Polarization. \emph{Proceedings of the 42$^{\,nd}$ Annual Conference of the Cognitive Science Society}.
 
     Gregory A, \ldots, \textbf{Turner MA} (2020). Efficient Model-data Integration for Flexible Modeling, Parameter Analysis \& Visualization, and Data Management. \emph{Frontiers in Water}. 
     \url{https://doi.org/10.3389/frwa.2020.00002}
@@ -141,27 +143,6 @@
   \end{hangparas}
 
 
-\noindent
-\section*{\textcolor{gunmetal}{Awards}}
-\begin{itemize}
-  \item NSF Research Training (NRT) Program in Intelligent Adaptive Systems, September 2020 - August 2021.
-  \item Research Data Alliance Early Career Fellow, May 2015
-    (\href{https://rd-alliance.org/rda_us data share program}{info}).
-  \item NSF Integrative Graduate Education and Research Traineeship (IGERT) Fellow, August 2010 - May 2012.
-  \item NSF International Research Experience for Students (IRES) at UFSC,
-    Santa Catarina, Brazil, Summer 2008;
-    astrophysical research and autonomous telescope network development.
-\end{itemize}
-
-\noindent
-\section*{\textcolor{gunmetal}{Preprints}}
-\begin{hangparas}{0.25in}{1}
-
-  \textbf{Turner MA}, Maglio PP, Matlock T (2018) Metaphorical Violence in Political Discourse. \url{https://doi.org/10.31235/osf.io/t8yg9}
-
-  \textbf{Turner MA} (2018) A neural network to classify metaphorical violence on cable news. \url{https://arxiv.org/abs/1810.08677}
-
-\end{hangparas}
 
 \noindent
 % {\Large Presentations} \\
@@ -170,7 +151,13 @@
 
 % \begin{minipage}{0.9\textwidth}
   \begin{hangparas}{0.25in}{1}
-   Kello C, \textbf{Turner MA}, Alviar C, (2019, August) A Statistical Model of Hierarchical Temporal Structure. The Guy Van Orden UConn Workshop on Cognition and Dynamics, XIV. Univeristy of Connecticut.
+    \textbf{Turner MA}, (2021, February, \emph{Accepted}) Statistical Models of Group Polarization: Putting Theory into Practice. Society for Personality and Social Psychology. Poster. Online.
+
+    \textbf{Turner MA} \& Smaldino PE, (2020, August) Group polarization via stubborn extremism. 42nd Annual Meeting of the Cognitive Science Society. Online. \href{https://www.researchgate.net/publication/342153646_Stubborn_extremism_as_a_potential_pathway_to_group_polarization}{Paper.} \href{https://youtu.be/i5PHjwu1p40}{Video.}
+
+   \textbf{Turner MA} \& Smaldino PE, (2020, July) Group polarization via stubborn extremism. 6th International Conference on Computational Social Science. Online.
+
+Kello C, \textbf{Turner MA}, Alviar C, (2019, August) A Statistical Model of Hierarchical Temporal Structure. The Guy Van Orden UConn Workshop on Cognition and Dynamics, XIV. Univeristy of Connecticut.
 
 \textbf{Turner MA}, Bernacchi L, Maglio PP, Matlock T, (2018, December) How regulations strangle business: Lessons for science communication based on violence metaphors in the 2016 presidential election. eLightning talk at the American Geophysical Union meeting in Washington, D.C. \url{https://agu.confex.com/agu/fm18/meetingapp.cgi/Paper/451955}
 
@@ -191,6 +178,51 @@
   % \begin{hangparas}{0.25in}{1}
   % \end{hangparas}
 % \end{minipage} \\[.25in]
+
+\noindent
+\section*{\textcolor{gunmetal}{Awards}}
+\begin{itemize}
+  \item NSF Research Training (NRT) Program in Intelligent Adaptive Systems, September 2020 - August 2021.
+  \item Research Data Alliance Early Career Fellow, May 2015
+    (\href{https://rd-alliance.org/rda_us data share program}{info}).
+  \item NSF Integrative Graduate Education and Research Traineeship (IGERT) Fellow, August 2010 - May 2012.
+  \item NSF International Research Experience for Students (IRES) at UFSC,
+    Santa Catarina, Brazil, Summer 2008;
+    astrophysical research and autonomous telescope network development.
+\end{itemize}
+
+\noindent
+\section*{\textcolor{gunmetal}{Teaching experience}}
+\begin{itemize}
+  \item Led hands-on workshop in Smaldino lab group on how to use the on-campus supercomputing cluster at UC Merced, Spring 2020
+  \item TA/Computing lab instructor, Introduction to Artificial Intelligence, Prof. David Noelle, Fall 2017, 2018, \& 2019
+  \item TA/Computing lab instructor and guest lecturer, Modeling Social Systems, Prof. Paul Smaldino, Spring 2019
+  \item TA, Contemporary Moral Problems, Prof. David Jennings, Spring 2018
+  \item TA, Introduction to Ethics, Prof. David Jennings, Spring 2017
+  \item TA, Introduction to Cognitive Science, Prof. Rick Dale, Fall 2016
+\end{itemize}
+
+\noindent
+\section*{\textcolor{gunmetal}{Mentorship}}
+\begin{itemize}
+  \item Mentored and supervised several UC Merced students in 2017 
+    who contributed to
+    Metacorps, the web application I developed for annotating metaphor found
+    on cable news. Students were Gloria Quintana, Amy Tang, Sebastian Lavenant, Isabella Methot,
+    Danny Zamora, and Conor Aaron.
+  \item Mentored and supervised undergraduate Joy Dai on a signal processing project using MATLAB for
+    one semester of research at Rice University, 2011.
+\end{itemize}
+
+\noindent
+\section*{\textcolor{gunmetal}{Preprints}}
+\begin{hangparas}{0.25in}{1}
+
+  \textbf{Turner MA}, Maglio PP, Matlock T (2018) Metaphorical Violence in Political Discourse. \url{https://doi.org/10.31235/osf.io/t8yg9}
+
+  \textbf{Turner MA} (2018) A neural network to classify metaphorical violence on cable news. \url{https://arxiv.org/abs/1810.08677}
+
+\end{hangparas}
 
 \noindent
 \section*{\textcolor{gunmetal}{Reviewer}}
