fixed formatting, added forthcoming papers and VW mentorship

--- a/turner_cv.tex
+++ b/turner_cv.tex
@@ -67,7 +67,7 @@
 
     \textbf{Ph.D. candidate}, Cognitive and Information 
       Sciences, \emph{University of California, Merced}. Expected Spring 2021. Adviser: Paul E. Smaldino; Committee:
-    Chris Kello, Teenie Matlock, and Jeffrey Yoshimi.
+    Christopher T. Kello, Teenie Matlock, and Jeffrey Yoshimi.
 
     \textbf{M.S. with thesis}, Applied Physics, \emph{Rice University}, 2012. Adviser: 
       Kevin F. Kelly.
@@ -83,10 +83,20 @@
 % \begin{minipage}{0.9\textwidth}
   \begin{hangparas}{0.25in}{1}
     2014 - 2016 \hspace{-0.555em} \quad\textbf{Research Software Developer}, 
-        \emph{Northwest Knowledge Network, University of Idaho}, Moscow, ID, USA 
+        \emph{Northwest Knowledge Network, University of Idaho}, Moscow, ID, USA. Led development of the ``Virtual Watershed'' modeling and data analysis \&
+        management system and associated tools (see Volk \& Turner, 2019, and 
+        Gregory, et al., 2020, listed below). 
+        Integrated contributions of faculty, graduate students,
+        and other professional software developers.
 
       2012 - 2014 \quad \textbf{Data Engineer}, 
-      \emph{Economic Modeling Specialists Int'l}, Moscow, ID, USA 
+      \emph{Economic Modeling Specialists Int'l}, Moscow, ID, USA.
+      Ported legacy PHP code and SQL queries for large-scale 
+      economic data processing
+      and forecasting to the D programming language. 
+      Developed novel approaches and applied best-practices to large-scale
+      economic forecasts.
+
   \end{hangparas}
 % \end{minipage}
 
@@ -104,9 +114,13 @@
 
 % \begin{minipage}{0.9\textwidth}
 \begin{hangparas}{0.25in}{1}
-Smaldino PE \& \textbf{Turner MA}. Covert Signaling is an Adaptive Communication Strategy in Diverse Populations. \emph{Under review}.
+  \textbf{Turner MA} \& Smaldino PE. Is Group Polarization Real? A generative model of false group polarization detection. 
+  \emph{In preparation}.
 
-  \textbf{Turner MA} \& Smaldino PE (2020). Stubborn Extremism as a Potential Pathway to Group Polarization. \emph{Proceedings of the 42$^{\,nd}$ Annual Conference of the Cognitive Science Society}.
+  Smaldino PE \& \textbf{Turner MA}. (Forthcoming) Covert Signaling is an Adaptive Communication Strategy in Diverse Populations. \emph{Psychological Review}.
+  Preprint: \url{https://osf.io/preprints/socarxiv/j9wyn/}
+
+  \textbf{Turner MA} \& Smaldino PE (2020). Stubborn Extremism as a Potential Pathway to Group Polarization. \emph{Proceedings of the 42$^{\,nd}$ Annual Conference of the Cognitive Science Society}. \url{https://cogsci.mindmodeling.org/2020/papers/0153/}
 
     Gregory A, \ldots, \textbf{Turner MA} (2020). Efficient Model-data Integration for Flexible Modeling, Parameter Analysis \& Visualization, and Data Management. \emph{Frontiers in Water}. 
     \url{https://doi.org/10.3389/frwa.2020.00002}
@@ -125,6 +139,10 @@ Smaldino PE \& \textbf{Turner MA}. Covert Signaling is an Adaptive Communication
     Kanbur SM, Marconi M, Ngeow C, Musella I, \textbf{Turner MA}, et al. (2011) Period–colour and amplitude–colour relations in classical Cepheid variables – VI. New challenges for pulsation models. \emph{Monthly Notices of the Royal Astronomical Society}, 408 (2), 695-700.
 
     Kanbur SM, Marconi M, Ngeow C, Musella I, \textbf{Turner MA}, et al. (2009) Multiphase PC/PL Relations: Comparison Between Theory and Observations. AIP Conference Proceedings, Stellar Pulsations: Challenges for Theory and Observation, 1170 (September), 18-22.
+
+    Acevedo R, Lombardini R, \textbf{Turner MA}, Kinsey JL, Johnson BR (2008)
+    Quantum and electromagnetic propagation with the conjugate symmetric
+    Lanczos method. \emph{Journal of Chemical Physics}, 128.
     
   \end{hangparas}
 % \end{minipage} \\[.25in]
@@ -151,7 +169,9 @@ Smaldino PE \& \textbf{Turner MA}. Covert Signaling is an Adaptive Communication
 
 % \begin{minipage}{0.9\textwidth}
   \begin{hangparas}{0.25in}{1}
-    \textbf{Turner MA}, (2021, February, \emph{Accepted}) Statistical Models of Group Polarization: Putting Theory into Practice. Society for Personality and Social Psychology. Poster. Online.
+    \textbf{Turner MA}, (2021, February) Statistical Models of Group Polarization: Putting Theory into Practice. Society for Personality and Social Psychology. Poster. Online.
+
+    \textbf{Turner MA}, (2021, January) Social structure from repeated social interaction. Philosophy of Science Association. Poster. Online.
 
     \textbf{Turner MA} \& Smaldino PE, (2020, August) Group polarization via stubborn extremism. 42nd Annual Meeting of the Cognitive Science Society. Online. \href{https://www.researchgate.net/publication/342153646_Stubborn_extremism_as_a_potential_pathway_to_group_polarization}{Paper.} \href{https://youtu.be/i5PHjwu1p40}{Video.}
 
@@ -194,12 +214,13 @@ Kello C, \textbf{Turner MA}, Alviar C, (2019, August) A Statistical Model of Hie
 \noindent
 \section*{\textcolor{gunmetal}{Teaching experience}}
 \begin{itemize}
-  \item Led hands-on workshop in Smaldino lab group on how to use the on-campus supercomputing cluster at UC Merced, Spring 2020
-  \item TA/Computing lab instructor, Introduction to Artificial Intelligence, Prof. David Noelle, Fall 2017, 2018, \& 2019
-  \item TA/Computing lab instructor and guest lecturer, Modeling Social Systems, Prof. Paul Smaldino, Spring 2019
-  \item TA, Contemporary Moral Problems, Prof. David Jennings, Spring 2018
-  \item TA, Introduction to Ethics, Prof. David Jennings, Spring 2017
-  \item TA, Introduction to Cognitive Science, Prof. Rick Dale, Fall 2016
+  \item Invited by Prof.\ Heather Bortfield to give lecture and workshop on cultural evolution and open science best-practices, Spring 2021
+  \item Led hands-on workshop in Prof.\ Smaldino lab group on how to use the on-campus supercomputing cluster at UC Merced, Spring 2020
+  \item TA/Computing lab instructor, Introduction to Artificial Intelligence, Prof.\ David Noelle, Fall 2017, 2018, \& 2019
+  \item TA/Computing lab instructor and guest lecturer, Modeling Social Systems, Prof.\ Paul Smaldino, Spring 2019
+  \item TA, Contemporary Moral Problems, Prof.\ David Jennings, Spring 2018
+  \item TA, Introduction to Ethics, Prof.\ David Jennings, Spring 2017
+  \item TA, Introduction to Cognitive Science, Prof.\ Rick Dale, Fall 2016
 \end{itemize}
 
 \noindent
@@ -210,6 +231,9 @@ Kello C, \textbf{Turner MA}, Alviar C, (2019, August) A Statistical Model of Hie
     Metacorps, the web application I developed for annotating metaphor found
     on cable news. Students were Gloria Quintana, Amy Tang, Sebastian Lavenant, Isabella Methot,
     Danny Zamora, and Conor Aaron.
+  \item
+    Mentored several graduate student programmers as part of the Virtual Watershed
+    project with the Northwest Knowledge Network.
   \item Mentored and supervised undergraduate Joy Dai on a signal processing project using MATLAB for
     one semester of research at Rice University, 2011.
 \end{itemize}
@@ -228,7 +252,7 @@ Kello C, \textbf{Turner MA}, Alviar C, (2019, August) A Statistical Model of Hie
 \section*{\textcolor{gunmetal}{Reviewer}}
 
   \begin{hangparas}{0.25in}{1}
-    \emph{Psychological Review} $\cdot$ \emph{Cognitive Systems Research}
+    \emph{Psychological Review} $\cdot$ \emph{Cognitive Processing} $\cdot$ \emph{Cognitive Systems Research}
   \end{hangparas}
 
 
