added mech models paper

--- a/turner_cv.tex
+++ b/turner_cv.tex
@@ -66,7 +66,7 @@
   \begin{hangparas}{0.25in}{1}
 
     \textbf{Ph.D. candidate}, Cognitive and Information 
-      Sciences, \emph{University of California, Merced}. Expected Spring 2021. Adviser: Paul E. Smaldino; Committee:
+      Sciences, \emph{University of California, Merced}. Expected Summer 2021. Adviser: Paul E. Smaldino; Committee:
     Christopher T. Kello, Teenie Matlock, and Jeffrey Yoshimi.
 
     \textbf{M.S. with thesis}, Applied Physics, \emph{Rice University}, 2012. Adviser: 
@@ -117,7 +117,11 @@
   \textbf{Turner MA} \& Smaldino PE. Is Group Polarization Real? A generative model of false group polarization detection. 
   \emph{In preparation}.
 
-  Smaldino PE \& \textbf{Turner MA}. (Forthcoming) Covert Signaling is an Adaptive Communication Strategy in Diverse Populations. \emph{Psychological Review}.
+  \textbf{Turner MA} \& Smaldino PE. (2021). Mechanistic Modeling for the Masses - 
+  commentary on Yarkoni, ``The generalizability crisis.''
+  Behavioral and Brain Sciences. \url{https://psyarxiv.com/8pj9n}
+
+  Smaldino PE \& \textbf{Turner MA}. (Accepted pending revisions) Covert Signaling is an Adaptive Communication Strategy in Diverse Populations. \emph{Psychological Review}.
   Preprint: \url{https://osf.io/preprints/socarxiv/j9wyn/}
 
   \textbf{Turner MA} \& Smaldino PE (2020). Stubborn Extremism as a Potential Pathway to Group Polarization. \emph{Proceedings of the 42$^{\,nd}$ Annual Conference of the Cognitive Science Society}. \url{https://cogsci.mindmodeling.org/2020/papers/0153/}
