updates from early 2022

--- a/turner_cv.tex
+++ b/turner_cv.tex
@@ -49,10 +49,10 @@
 
 \begin{center}
 \begin{tabular}{l l}
- University of California, Merced & \hspace{1in} \href{mailto:mturner8@ucmerced.edu}{mturner8@ucmerced.edu} \\
- Cognitive and Information Sciences    & \hspace{1in}  \href{http://mt.digital}{mt.digital}   \\
-  5200 Lake Road             & \hspace{1in} GitHub: \href{https://github.com/mt-digital}{mt-digital}  \\
- Merced, CA, 95348 & \hspace{1in} Phone: +1 (585) 350-8649 \\
+ Stanford University & \hspace{1in} \href{mailto:maturner@stanford.edu}{maturner@stanford.edu} \\
+ Department of Earth System Science    & \hspace{1in}  \href{https://mt.digital}{mt.digital}   \\
+ 450 Serra Mall  & \hspace{1in}  \href{https://github.com/mt-digital}{GitHub: mt-digital}\\
+ Stanford, CA 94305 & \hspace{1in} Phone: +1 (585) 350-8649 \\
 \end{tabular}
 \end{center}
 
@@ -60,17 +60,17 @@
 
 %%%%%%%%%%%%%%%%% MAIN BODY %%%%%%%%%%%%%%%%%%%%%%%%%%%
 % The main body is contained in a tabular environment. To move sections onto the next page, simply end the tabular environment and begin a new tabular environment.
-\section*{\textcolor{gunmetal}{Education}}
+\section*{\textcolor{gunmetal}{Education and training}}
 
 % \begin{minipage}{0.9\textwidth}
   \begin{hangparas}{0.25in}{1}
+    \textbf{Postdoctoral researcher}, Earth System Science, \emph{Stanford University}. September 2021 - Present.
 
-    \textbf{Ph.D. candidate}, Cognitive and Information 
-      Sciences, \emph{University of California, Merced}. Expected Summer 2021. Adviser: Paul E. Smaldino; Committee:
-    Christopher T. Kello, Teenie Matlock, and Jeffrey Yoshimi.
+    \textbf{Ph.D.}, Cognitive and Information 
+      Sciences, \emph{University of California, Merced}. August 2021. \\ Chair: Paul E. Smaldino. \\ Committee:
+    Christopher T. Kello, Teenie Matlock, and Jeffrey Yoshimi. 
 
-    \textbf{M.S. with thesis}, Applied Physics, \emph{Rice University}, 2012. Adviser: 
-      Kevin F. Kelly.
+    \textbf{M.S. with thesis}, Applied Physics, \emph{Rice University}, 2012.
 
     \textbf{B.S.} Mathematics, Physics. \emph{Syracuse University}, 2008.
   \end{hangparas}
@@ -82,14 +82,14 @@
 
 % \begin{minipage}{0.9\textwidth}
   \begin{hangparas}{0.25in}{1}
-    2014 - 2016 \hspace{-0.555em} \quad\textbf{Research Software Developer}, 
+    October 2014 - September 2016 \hspace{-0.555em} \quad\textbf{Research Software Developer II}, 
         \emph{Northwest Knowledge Network, University of Idaho}, Moscow, ID, USA. Led development of the ``Virtual Watershed'' modeling and data analysis \&
         management system and associated tools (see Volk \& Turner, 2019, and 
         Gregory, et al., 2020, listed below). 
         Integrated contributions of faculty, graduate students,
         and other professional software developers.
 
-      2012 - 2014 \quad \textbf{Data Engineer}, 
+      September 2012 - October 2014 \quad \textbf{Data Engineer}, 
       \emph{Economic Modeling Specialists Int'l}, Moscow, ID, USA.
       Ported legacy PHP code and SQL queries for large-scale 
       economic data processing
@@ -114,15 +114,11 @@
 
 % \begin{minipage}{0.9\textwidth}
 \begin{hangparas}{0.25in}{1}
-  \textbf{Turner MA} \& Smaldino PE. Is Group Polarization Real? A generative model of false group polarization detection. 
-  \emph{In preparation}.
+  Smaldino PE \& \textbf{Turner MA} (2021). Covert signaling is an adaptive communication strategy in diverse populations. \emph{Psychological Review.} \url{https://doi.org/10.1037/rev0000344}
 
-  \textbf{Turner MA} \& Smaldino PE. (2021). Mechanistic Modeling for the Masses - 
+  \textbf{Turner MA} \& Smaldino PE. (In press). Mechanistic Modeling for the Masses - 
   commentary on Yarkoni, ``The generalizability crisis.''
   Behavioral and Brain Sciences. \url{https://psyarxiv.com/8pj9n}
-
-  Smaldino PE \& \textbf{Turner MA}. (Accepted pending revisions) Covert Signaling is an Adaptive Communication Strategy in Diverse Populations. \emph{Psychological Review}.
-  Preprint: \url{https://osf.io/preprints/socarxiv/j9wyn/}
 
   \textbf{Turner MA} \& Smaldino PE (2020). Stubborn Extremism as a Potential Pathway to Group Polarization. \emph{Proceedings of the 42$^{\,nd}$ Annual Conference of the Cognitive Science Society}. \url{https://cogsci.mindmodeling.org/2020/papers/0153/}
 
@@ -151,8 +147,9 @@
   \end{hangparas}
 % \end{minipage} \\[.25in]
 
-\noindent
 % {\Large Preprints} \\
+
+\noindent
 \section*{\textcolor{gunmetal}{Patent}}
 
 % \begin{minipage}{0.9\textwidth}
@@ -169,10 +166,29 @@
 \noindent
 % {\Large Presentations} \\
 
-\section*{\textcolor{gunmetal}{Presentations}}
+\noindent
+\section*{\textcolor{gunmetal}{Works in progress}}
+\begin{hangparas}{0.25in}{1}
+
+  \textbf{Turner MA} \& Smaldino PE. Most group polarization results may be
+  simple conformity.
+  \emph{In preparation}.
+
+  \textbf{Turner MA} \& Smaldino PE. Group polarization emerges from stubborn extremism.
+  \emph{In preparation}.
+
+  \textbf{Turner MA}, Maglio PP, Matlock T. Metaphorical Violence in Political Discourse. 
+  \emph{Under revision}. Preprint: \url{https://doi.org/10.31235/osf.io/t8yg9}.
+
+\end{hangparas}
+
+\noindent
+\section*{\textcolor{gunmetal}{Talks and presentations}}
 
 % \begin{minipage}{0.9\textwidth}
   \begin{hangparas}{0.25in}{1}
+    \textbf{Turner MA}, \emph{Theory and practice of open science solutions}. Presented as a two-day lecture and workshop to Heather Bortfeld's graduate introductory psychology class. I presented how open science works (pre-registration, accessible data management, open data, open code, etc.) and how it can help ease the various crises (e.g. replication, theory, generalizability crises) faced by psychological research.
+
     \textbf{Turner MA}, (2021, February) Statistical Models of Group Polarization: Putting Theory into Practice. Society for Personality and Social Psychology. Poster. Online.
 
     \textbf{Turner MA}, (2021, January) Social structure from repeated social interaction. Philosophy of Science Association. Poster. Online.
@@ -219,7 +235,7 @@ Kello C, \textbf{Turner MA}, Alviar C, (2019, August) A Statistical Model of Hie
 \section*{\textcolor{gunmetal}{Teaching experience}}
 \begin{itemize}
   \item Invited by Prof.\ Heather Bortfield to give lecture and workshop on cultural evolution and open science best-practices, Spring 2021
-  \item Led hands-on workshop in Prof.\ Smaldino lab group on how to use the on-campus supercomputing cluster at UC Merced, Spring 2020
+  \item Led hands-on workshop in Prof.\ Smaldino's lab group on how to use the on-campus supercomputing cluster at UC Merced, Spring 2020
   \item TA/Computing lab instructor, Introduction to Artificial Intelligence, Prof.\ David Noelle, Fall 2017, 2018, \& 2019
   \item TA/Computing lab instructor and guest lecturer, Modeling Social Systems, Prof.\ Paul Smaldino, Spring 2019
   \item TA, Contemporary Moral Problems, Prof.\ David Jennings, Spring 2018
@@ -246,17 +262,15 @@ Kello C, \textbf{Turner MA}, Alviar C, (2019, August) A Statistical Model of Hie
 \section*{\textcolor{gunmetal}{Preprints}}
 \begin{hangparas}{0.25in}{1}
 
-  \textbf{Turner MA}, Maglio PP, Matlock T (2018) Metaphorical Violence in Political Discourse. \url{https://doi.org/10.31235/osf.io/t8yg9}
-
   \textbf{Turner MA} (2018) A neural network to classify metaphorical violence on cable news. \url{https://arxiv.org/abs/1810.08677}
 
 \end{hangparas}
 
 \noindent
-\section*{\textcolor{gunmetal}{Reviewer}}
+\section*{\textcolor{gunmetal}{Reviewer service}}
 
   \begin{hangparas}{0.25in}{1}
-    \emph{Psychological Review} $\cdot$ \emph{Cognitive Processing} $\cdot$ \emph{Cognitive Systems Research}
+    \emph{Cognitive Processing} $\cdot$ \emph{Psychological Review} $\cdot$ \emph{Society for Personality and Social Psychology Annual Convention} $\cdot$ \emph{Cognitive Systems Research}
   \end{hangparas}
 
 
@@ -264,13 +278,13 @@ Kello C, \textbf{Turner MA}, Alviar C, (2019, August) A Statistical Model of Hie
 \section*{\textcolor{gunmetal}{Skills}}
 
 \begin{hangparas}{0.25in}{1}
-  \textbf{Programming languages}: Python; R; NetLogo; bash/shell scripting; 
+  \textbf{Programming languages}: Julia; Scala; Python; R; NetLogo; bash/shell scripting; 
   HTML/CSS/JavaScript; Java; D; MATLAB; Mathematica; Clojure.
 
-  \textbf{Technical proficiencies}: Agent-based modeling, computational 
-  modeling; IPython and R notebooks; Cluster computing;
+  \textbf{Technical proficiencies}: Computational 
+  modeling, especially agent-based; Jupyter notebooks; Cluster computing;
   Git/GitHub; Web servers; \LaTeX; MongoDB and SQL; REST APIs and API
-  development.
+  development generally.
 
   \textbf{Languages:} English; some experience with Portuguese, French,
   and Spanish.
